# tetrad-engine

./: .clang-format  .gitignore  .gitmodules  GENERAL.todo  README.md
assets/shaders/: UIFrag.glsl  testFrag.glsl  text-frag.glsl  ui-frag.glsl  uiFrag.glsl  world-frag.glsl  world-vert.glsl
assets/textures/UI/: BTN_Exit.tga
docs/: Building.md  Developer.md
src/: CMakeLists.txt  Config.h.in  DELETE.h  Doxyfile.in  main.cpp
src/cmake/: TetradHelpers.cmake
src/core/: Base.h  BaseTypes.h  CMakeLists.txt  ConstVector.h  ErrorSystem.h  EventQueue.h  ExitHook.h  Font.h  GlTypes.h  Guid.h  IAction.h  LinkedList.h  Log.h  LogInternals.h  LogSystem.h  ObjectHandle.h  Package.h  PackageFormat.h  Paths.h  Platform.h  PriorityLinkedList.h  Rand.h  Reflection.h  ShaderGlobals.h  StlUtils.h  Timer.h  Types.h
src/core/_private/: Base.cpp  ErrorSystem.cpp  EventQueue.cpp  ExitHook.cpp  Font.cpp  Guid.cpp  Log.cpp  LogInternals.cpp  LogSystem.cpp  ObjectHandle.cpp  Package.cpp  PackageFormat.cpp  Platform.cpp  Rand.cpp  ShaderProgram.cpp  Timer.cpp  Types.cpp
src/editor/: CMakeLists.txt  Editor.h  editorMain.cpp
src/editor/_private/: Editor.cpp
src/engine/: CMakeLists.txt  Entity.h  EntityManager.h  IAction.h  IComponent.h  ISystem.h  ResourceManager.h  Screen.h  ScreenPartition.h  UIElement.h
src/engine/UI/: UIBase.h  UIButton.h  UIComponent.h  UIViewport.h
src/engine/UI/_private/: TextComponent.cpp  UIButton.cpp  UIComponent.cpp  UIViewport.cpp
src/engine/_inc/: ObjList.h
src/engine/_private/: EntityManager.cpp  ResourceManager.cpp  ResourceManager_Texture.cpp  Screen.cpp  ScreenPartition.cpp
src/engine/ecs/: CMakeLists.txt  ComponentManager.h  Entity.h  EntityManager.h  IComponent.h  IComponentManager.h  ISystem.h  ObjList.h  System.h
src/engine/ecs/_private/: ComponentManager.cpp  ComponentManager.inc  Entity.cpp  EntityManager.cpp  ISystem.cpp
src/engine/event/: CMakeLists.txt  Constants.h  Event.h  EventQueue.h  EventSystem.h  IAction.h  ObserverComponent.h
src/engine/event/_private/: EventQueue.cpp  EventSystem.cpp  ObserverComponent.cpp
src/engine/game/: Action_ExitGame.h  Action_PauseGame.h  CMakeLists.txt  CallbackContext.h  Game.h
src/engine/game/_private/: Action_ExitGame.cpp  Action_PauseGame.cpp  CallbackContext.cpp  Game.cpp
src/engine/physics/: Action_Jump.h  Action_Move.h  CMakeLists.txt  PhysicsComponent.h  PhysicsSystem.h
src/engine/physics/_private/: Action_Jump.cpp  Action_Move.cpp  PhysicsComponent.cpp  PhysicsSystem.cpp
src/engine/render/: CMakeLists.txt  CameraComponent.h  DrawComponent.h  DrawSystem.h  MaterialComponent.h  ShaderGlobals.h  ShaderProgram.h
src/engine/render/_private/: CameraComponent.cpp  DrawComponent.cpp  DrawSystem.cpp  MaterialComponent.cpp  ShaderGlobals.cpp  ShaderProgram.cpp
src/engine/resource/: CMakeLists.txt  Font.h  ResourceManager.h
src/engine/resource/_private/: Font.cpp  ResourceManager.cpp  ResourceManager_Texture.cpp
src/engine/screen/: CMakeLists.txt  Screen.h  ScreenPartition.h
src/engine/screen/_private/: Screen.cpp  ScreenPartition.cpp
src/engine/transform/: AttachComponent.h  CMakeLists.txt  MovableComponent.h  TransformComponent.h
src/engine/transform/_private/: AttachComponent.cpp  MovableComponent.cpp  TransformComponent.cpp
src/engine/ui/: CMakeLists.txt  TextComponent.h  UI.h  UIBase.h  UIButton.h  UIComponent.h  UIViewport.h  UIWindow.h
src/engine/ui/_private/: TextComponent.cpp  UIButton.cpp  UIComponent.cpp  UIViewport.cpp
src/examples/tetrad-game/: TetradGame.h
src/examples/tetrad-game/_private/: GameplaySystem.cpp  TetradGame.cpp
src/examples/tetrad-game/obstacle/: ObstacleFactoryComponent.h
src/examples/tetrad-game/obstacle/_private/: ObstacleFactoryComponent.cpp
src/game/: CallbackContext.h  Game.h  InputConstants.h  Paths.h  TetradGame.h
src/game/_private/: CallbackContext.cpp  Game.cpp  TetradGame.cpp
src/game/action/: Action_ExitGame.h  Action_Jump.h  Action_Move.h  Action_PauseGame.h
src/game/action/_private/: Action_ExitGame.cpp  Action_Move.cpp  Action_PauseGame.cpp
src/game/component/: AttachComponent.h  CameraComponent.h  DrawComponent.h  MaterialComponent.h  MovableComponent.h  PhysicsComponent.h  TextComponent.h  TransformComponent.h  UIComponent.h
src/game/component/UI/: UI.h  UIButton.h  UIViewport.h  UIWindow.h
src/game/component/UI/_private/: UIButton.cpp  UIViewport.cpp
src/game/component/_private/: AttachComponent.cpp  CameraComponent.cpp  DrawComponent.cpp  MaterialComponent.cpp  MovableComponent.cpp  ObserverComponent.cpp  PhysicsComponent.cpp  TextComponent.cpp  TransformComponent.cpp  UIComponent.cpp
src/game/system/: DrawSystem.h  EventSystem.h
src/game/system/_private/: DrawSystem.cpp  EventSystem.cpp  PhysicsSystem.cpp
src/tetrad-game/: CMakeLists.txt  Constants.h  GameplaySystem.h  TetradGame.h  main.cpp
src/tetrad-game/_private/: GameplaySystem.cpp  TetradGame.cpp
src/tetrad-game/obstacle/: ObstacleFactoryComponent.h
src/tetrad-game/obstacle/_private/: ObstacleFactoryComponent.cpp
src/tools/: packageBuilder.h  packageTest.cpp
src/tools/build_tool/: __main__.py  setup.py
src/tools/build_tool/build_tool/: build_tool.py  manifest.proto  manifest.py  manifest_pb2.py  utils.py  worker_thread.py
src/tools/build_tool/build_tool/cpp_parser/: cpp_standard.py  dfa.py  lexer.py  parser.py  token.py
src/tools/build_tool/build_tool/templates/: ComponentManager.cpp.in
src/tools/package-builder/: packageBuilder.cpp  packageBuilder.h
src/tools/package-reader/: packageReader.cpp
